tests/negative/lexer/hex_digit.orng
fn main() -> Int {
    0xXYZ
}